--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <h1>🎈 Count, Multiply & Smile! 😊</h1>
     
     <script src="./index.js"></script>
 </body>
 </html>
+
+
+
+
